<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_format" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_png"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_png"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PNG" />

        <RadioButton
            android:id="@+id/rb_jpeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="JPEG" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_size_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/long_side"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="110dp"
            android:labelFor="@id/et_size_1"/>

        <EditText
            android:id="@+id/et_size_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:text="1600"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:importantForAutofill="no" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sb1"
        style="@style/MySeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:progress="3" />

    <LinearLayout
        android:id="@+id/ll_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="110dp"
            android:labelFor="@id/et_size_2"/>

        <EditText
            android:id="@+id/et_size_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:text="1600"
            android:textAlignment="textEnd"
            android:textColor="?android:attr/textColorPrimary"
            android:importantForAutofill="no" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb2"
        style="@style/MySeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="9"
        android:progress="3"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/cb_keep_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/keep_ratio" />
</LinearLayout>